@@ -34,6 +34,8 @@ Version 1.5.2+svn:
      associate an id. to [time_area]s, or it won't work.
  * Miscellaneous and bug fixes:
    * Add some gcc-4.3.0 compilation fixes (patch #1083)
+   * Fixed bug #12094: Event "last breath" cannot be triggered for attackers
+
 
 
 Version 1.5.2:
